# substrate-node-template

node/src/: chain_spec.rs
pallets/kitties/: Cargo.toml  README.md
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/poe/: Cargo.toml  README.md
pallets/poe/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml  README.md
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
specs/: local.json  local_raw.json
